# ChatGPT-TokenBreaker

./: .gitignore  large_text.txt  setup.cfg
src/: main.py
src/text_manipulation/: text_manipulator.py
tests/: __init__.py  test_text_manipulator.py
