[metadata]
name = ChatGPT-TokenBreaker

[options]
package_dir =
    =src
packages =
    find:
install_requires =
    Requests
setup_requires =
    setuptools_scm >= 1.15
    wheel
python_requires = >=3.10

[options.packages.find]
where=src

[coverage:run]
branch = true
source = src

[tox:tox]
envlist = py310

[testenv]
allowlist_external = coverage
deps =
    coverage >= 7.3.1
    moto >= 1.28.57
    -e .
skip_install = true


commands =
    coverage run -m unittest discover -v -s ./tests
    coverage report -m
    coverage html